--- a/docs/src/app/globals.css
+++ b/docs/src/app/globals.css
@@ -30,3 +30,18 @@ body {
 /* button, [type='button'], [type='reset'], [type='submit'] {
   background-color: var(--ld-btn-bg-color);
 } */
+
+/* custom scrollbar for navigation menu */
+.scrollbar-nice {
+  scrollbar-width: thin;
+}
+.scrollbar-nice::-webkit-scrollbar {
+  width: 6px;
+}
+.scrollbar-nice::-webkit-scrollbar-track {
+  background: transparent;
+}
+.scrollbar-nice::-webkit-scrollbar-thumb {
+  background-color: #cbd5e1;
+  border-radius: 4px;
+}
