Update css variables names

--- a/docs/src/app/globals.css
+++ b/docs/src/app/globals.css
@@ -28,7 +28,7 @@ body {
 
 /* rewrite tailwind default styles */
 /* button, [type='button'], [type='reset'], [type='submit'] {
-  background-color: var(--ld-btn-bg-color);
+  background-color: var(--chili-btn-bg-color);
 } */
 
 /* custom scrollbar for navigation menu */
