--- a/styles/themes/base/components/collapse.css
+++ b/styles/themes/base/components/collapse.css
@@ -5,31 +5,31 @@
 }
 
 .ld-collapse-summary {
-  border-radius: var(--ld-collapse-border-radius);
-  border: var(--ld-collapse-border);
-  padding-inline: var(--ld-collapse-summary-padding-inline);
-  padding-block: var(--ld-collapse-summary-padding-block);
+  border-radius: var(--chili-collapse-border-radius);
+  border: var(--chili-collapse-border);
+  padding-inline: var(--chili-collapse-summary-padding-inline);
+  padding-block: var(--chili-collapse-summary-padding-block);
   cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   &:hover {
-    border-color: var(--ld-collapse-border-color-hover);
+    border-color: var(--chili-collapse-border-color-hover);
 
     .ld-collapse-icon {
-      color: var(--ld-collapse-border-color-hover);
+      color: var(--chili-collapse-border-color-hover);
     }
   }
-  
+
   .ld-collapse-icon {
     transition: transform 0.2s linear;
     transform: rotate(0);
-    color: var(--ld-collapse-border-color);
+    color: var(--chili-collapse-border-color);
   }
 }
 
 .ld-collapse-content {
-  padding-inline: var(--ld-collapse-content-padding-inline);
-  padding-block: var(--ld-collapse-content-padding-block);
+  padding-inline: var(--chili-collapse-content-padding-inline);
+  padding-block: var(--chili-collapse-content-padding-block);
 }
