--- a/styles/themes/base/components/tabs.css
+++ b/styles/themes/base/components/tabs.css
@@ -5,7 +5,7 @@
 }
 
 .ld-tabs-container {
-  border-bottom: var(--ld-tabs-border-bottom);
+  border-bottom: var(--chili-tabs-border-bottom);
 }
 
 .ld-tabs-bar {
@@ -21,14 +21,14 @@
 
 .ld-tab {
   cursor: pointer;
-  padding: var(--ld-tabs-tab-padding);
+  padding: var(--chili-tabs-tab-padding);
   &:hover {
-    color: var(--ld-tabs-tab-text-color-hover);
+    color: var(--chili-tabs-tab-text-color-hover);
   }
 }
 
 .ld-tab-active {
-  border-bottom: var(--ld-tabs-tab-active-border);
+  border-bottom: var(--chili-tabs-tab-active-border);
   cursor: default;
   &:hover {
     color: initial;
@@ -37,33 +37,33 @@
 
 .ld-tab-disabled {
   cursor: not-allowed;
-  color: var(--ld-tabs-disabled-color);
+  color: var(--chili-tabs-disabled-color);
   &:hover {
-    color: var(--ld-tabs-disabled-color);
+    color: var(--chili-tabs-disabled-color);
   }
 }
 
 .ld-tabs-arrow {
   position: absolute;
-  top: var(--ld-tabs-arrow-top);
-  background: var(--ld-tabs-arrow-bg);
-  box-shadow: var(--ld-tabs-arrow-shadow);
-  color: var(--ld-tabs-arrow-color);
+  top: var(--chili-tabs-arrow-top);
+  background: var(--chili-tabs-arrow-bg);
+  box-shadow: var(--chili-tabs-arrow-shadow);
+  color: var(--chili-tabs-arrow-color);
   border-radius: 50%;
   cursor: pointer;
-  width: var(--ld-tabs-arrow-size);
-  height: var(--ld-tabs-arrow-size);
+  width: var(--chili-tabs-arrow-size);
+  height: var(--chili-tabs-arrow-size);
   &:hover {
-    color: var(--ld-tabs-arrow-color-hover);
+    color: var(--chili-tabs-arrow-color-hover);
   }
 }
 
 .ld-tabs-arrow-left {
   left: 0;
-  padding-right: var(--ld-tabs-arrow-padding-inner);
+  padding-right: var(--chili-tabs-arrow-padding-inner);
 }
 
 .ld-tabs-arrow-right {
   right: 0;
-  padding-left: var(--ld-tabs-arrow-padding-inner);
+  padding-left: var(--chili-tabs-arrow-padding-inner);
 }
