--- a/styles/themes/base/common/helpers.css
+++ b/styles/themes/base/common/helpers.css
@@ -1,43 +1,43 @@
 /* helpers for components with input fields */
 
 .ld-danger {
-  border-color: var(--ld-color-danger);
+  border-color: var(--chili-color-danger);
   &:hover {
-    border-color: var(--ld-color-danger);
+    border-color: var(--chili-color-danger);
   }
 }
 
 .ld-disabled {
   cursor: not-allowed;
-  background-color: var(--ld-input-bg-color-disabled);
-  
+  background-color: var(--chili-input-bg-color-disabled);
+
   &:hover {
-    border-color: var(--ld-input-border-color);
+    border-color: var(--chili-input-border-color);
   }
 
   .ld-required {
-    border-color: var(--ld-input-border-color);
+    border-color: var(--chili-input-border-color);
   }
 
   .ld-input-element {
-    background-color: var(--ld-input-bg-color-disabled);
+    background-color: var(--chili-input-bg-color-disabled);
   }
 
   .ld-input-icon {
-    background-color: var(--ld-input-bg-color-disabled);
-    color: var(--ld-input-border-color);
+    background-color: var(--chili-input-bg-color-disabled);
+    color: var(--chili-input-border-color);
     cursor: not-allowed;
 
     &:hover {
-      color: var(--ld-input-border-color);
+      color: var(--chili-input-border-color);
     }
   }
 }
 
 .ld-focused {
-  border-color: var(--ld-input-border-color-hover);
+  border-color: var(--chili-input-border-color-hover);
 
-  &:hover{
-    border-color: var(--ld-input-border-color-hover);
+  &:hover {
+    border-color: var(--chili-input-border-color-hover);
   }
 }
