--- a/styles/themes/base/components/loader.css
+++ b/styles/themes/base/components/loader.css
@@ -1,26 +1,26 @@
 .ld-loader-wrapper {
   position: relative;
-  min-height: var(--ld-loader-wrapper-min-height);
+  min-height: var(--chili-loader-wrapper-min-height);
 }
 
 .ld-loader-container {
-  background-color: var(--ld-loader-bg-color);
+  background-color: var(--chili-loader-bg-color);
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: var(--ld-loader-container-border-radius);
+  border-radius: var(--chili-loader-container-border-radius);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .ld-loader-element {
-  width: var(--ld-loader-size);
-  height: var(--ld-loader-size);
-  animation: var(--ld-loader-animation);
-  color: var(--ld-loader-color);
+  width: var(--chili-loader-size);
+  height: var(--chili-loader-size);
+  animation: var(--chili-loader-animation);
+  color: var(--chili-loader-color);
   @keyframes r-to-left {
     0% {
       transform: rotate(0deg);
@@ -35,13 +35,13 @@
 }
 
 .ld-loader-fullscreen {
-  background-color: var(--ld-loader-bg-color);
+  background-color: var(--chili-loader-bg-color);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: var(--ld-loader-fullscreen-z-index);
+  z-index: var(--chili-loader-fullscreen-z-index);
   display: flex;
   justify-content: center;
   align-items: center;
