--- a/styles/themes/base/components/multiselect.css
+++ b/styles/themes/base/components/multiselect.css
@@ -5,26 +5,26 @@
 .ld-multiselect-tags-container {
   display: flex;
   flex-wrap: wrap;
-  padding: var(--ld-multiselect-tags-container-padding);
+  padding: var(--chili-multiselect-tags-container-padding);
   .ld-tag {
-    margin: var(--ld-multiselect-tag-margin);
+    margin: var(--chili-multiselect-tag-margin);
   }
 }
 
 .ld-multiselect-tags-union {
-  margin: var(--ld-multiselect-tags-union-margin);
+  margin: var(--chili-multiselect-tags-union-margin);
 }
 
 .ld-multiselect-placeholder {
-  padding: var(--ld-multiselect-placeholder-padding);
-  color: var(--ld-multiselect-placeholder-color);
+  padding: var(--chili-multiselect-placeholder-padding);
+  color: var(--chili-multiselect-placeholder-color);
 }
 
 .ld-multiselect-input-wrapper {
   flex-direction: column;
-  border: var(--ld-multiselect-border);
-  background-color: var(--ld-multiselect-bg-color);
-  border-radius: var(--ld-multiselect-border-radius);
+  border: var(--chili-multiselect-border);
+  background-color: var(--chili-multiselect-bg-color);
+  border-radius: var(--chili-multiselect-border-radius);
 }
 
 .ld-multiselect-input {
@@ -32,20 +32,20 @@
   border: none;
   outline: none;
   width: 100%;
-  height: var(--ld-multiselect-input-height);
+  height: var(--chili-multiselect-input-height);
   font-family: inherit;
-  padding: var(--ld-multiselect-input-padding);
+  padding: var(--chili-multiselect-input-padding);
 }
 
 .ld-multiselect-clear-icon {
   position: absolute;
-  right: var(--ld-multiselect-clear-icon-right);
-  top: var(--ld-multiselect-clear-icon-top);
-  padding: var(--ld-multiselect-clear-icon-padding);
-  color: var(--ld-multiselect-clear-icon-color);
+  right: var(--chili-multiselect-clear-icon-right);
+  top: var(--chili-multiselect-clear-icon-top);
+  padding: var(--chili-multiselect-clear-icon-padding);
+  color: var(--chili-multiselect-clear-icon-color);
   cursor: pointer;
-  &:hover{
-    color: var(--ld-multiselect-clear-icon-color-hover);
+  &:hover {
+    color: var(--chili-multiselect-clear-icon-color-hover);
   }
 }
 
