--- a/styles/themes/base/components/textarea.css
+++ b/styles/themes/base/components/textarea.css
@@ -1,13 +1,13 @@
 .ld-textarea {
   width: 100%;
   resize: none;
-  height: var(--ld-textarea-height);
-  padding: var(--ld-textarea-padding);
-  border: var(--ld-textarea-border);
-  border-radius: var(--ld-textarea-border-radius);
+  height: var(--chili-textarea-height);
+  padding: var(--chili-textarea-padding);
+  border: var(--chili-textarea-border);
+  border-radius: var(--chili-textarea-border-radius);
   outline: none;
 
   &:hover {
-    border-color: var(--ld-textarea-border-color-hover);
+    border-color: var(--chili-textarea-border-color-hover);
   }
 }
